cc : Use EXPECT_TRANSFORMATION_MATRIX_EQ

BUG=624543
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2105743006
Cr-Commit-Position: refs/heads/master@{#402975}

Former-commit-id: 0bcc200ed8aacb783eeb7a4db055046b07694bba